Added users model and views

--- a/app/views/shared/_flash.html.erb
+++ b/app/views/shared/_flash.html.erb
@@ -1,7 +1,12 @@
-<div class="alert alert-info mt4" role="alert">
-    <%= flash[:notice] %>
-</div>
 
-<div class="alert alert-danger mt4" role="alert">
-    <%= flash[:alert] %>
-</div>
+<% if flash[:notice] %>
+    <div class="alert alert-info mt4" role="alert">
+        <%= flash[:notice] %>
+    </div>
+<% end %>
+
+<% if flash[:alert] %>
+    <div class="alert alert-danger mt4" role="alert">
+        <%= flash[:alert] %>
+    </div>
+<% end %>
