Setting up session cookies for secure login

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,3 +1,7 @@
 <div class="d-flex align-items-center justify-content-center">
-    <h1>Welcome to MyApp Home Page</h1>
+    <div class="container">
+        <div class="col">
+            <h1 class="row justify-content-md-center">Welcome to MyApp Home Page</h1>
+        </div>
+    </div>
 </div>
