--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -1,19 +1,35 @@
 <h1>Sign Up</h1>
 
 <%= form_with model: @user, url: sign_up_path do |form| %>
+    
+    <% if @user.errors.any? %>
+        <div class="alert alert-danger">
+            <% @user.errors.full_messages.each do |message| %>
+                <div>
+                    <%= message %>
+                </div>
+            <% end %>
+        </div>
+    <% end %>
+
+
     <div class="mb-3">
         <%= form.label :email %>
         <%= form.text_field :email, class: "form-control", placeholder: "e.g., name@coy.co.nz" %>    
     </div>
+    
     <div class="mb-3">
         <%= form.label :password %>
         <%= form.password_field :password, class: "form-control", placeholder: "Enter your password here..." %>
     </div>
+    
     <div class="mb-3">
         <%= form.label :password_confirmation %>
         <%= form.password_field :password_confirmation, class: "form-control", placeholder: "Re-enter your password here..." %>
     </div>
+    
+    
     <div class="mb-3">
-        <%= form.submit class: "btn btn-primary" %>
+        <%= form.submit %>
     </div>
 <% end %>
